# media-server

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
config/: default.nix
data/config/: config.toml  default.nix
src/: cache.rs  config.rs  init.nix  library.rs  main.rs  movie.rs  password.rs  utils.rs
tmdb/: Cargo.toml
tmdb/src/: client.rs  lib.rs
tmdb/src/apis/: search.rs
tmdb/src/types/: error.rs  mod.rs  models.rs  runtime.rs
