[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
video-rs = "0.9.0"
bcrypt = "0.15.1"
regex = "1.11.1"
colog = "1.3.0"
log = "0.4.22"
omdb = "0.3.2"
