[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tmdb = { path = "tmdb" }
serde_json = "1.0.132"
reqwest = "0.12.9"
bincode = "1.3.3"
dotenv = "0.15.0"
bcrypt = "0.15.1"
image = "0.25.4"
regex = "1.11.1"
colog = "1.3.0"
toml = "0.8.19"
log = "0.4.22"
