[package]
name = "tmdb"
description = "Async TMDb API wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_default_utils = { version = "0.3.0", features = [
    "inline",
    "serde-inline-default",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
reqwest = "0.12.9"
log = "0.4.22"
